[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/bricks2_n.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Combat_GUI.gd" type="Script" id=2]
[ext_resource path="res://Assets/arrow.png" type="Texture" id=3]

[node name="Combat_GUI" type="CanvasLayer" groups=[
"Combat_GUI",
]]
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 370.0
margin_bottom = 100.0
custom_constants/separation = 8
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 9.0
margin_right = 73.0
margin_bottom = 100.0

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/VBoxContainer"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 64.0
margin_bottom = 100.0

[node name="Arrow" type="TextureRect" parent="HBoxContainer/VBoxContainer/CenterContainer"]
margin_left = 16.0
margin_right = 48.0
margin_bottom = 32.0
texture = ExtResource( 3 )

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 81.0
margin_right = 145.0
margin_bottom = 100.0

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/VBoxContainer2"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 1 )

[node name="CenterContainer2" type="CenterContainer" parent="HBoxContainer/VBoxContainer2"]
margin_top = 68.0
margin_right = 64.0
margin_bottom = 100.0

[node name="Arrow" type="TextureRect" parent="HBoxContainer/VBoxContainer2/CenterContainer2"]
margin_left = 16.0
margin_right = 48.0
margin_bottom = 32.0
texture = ExtResource( 3 )

[node name="VBoxContainer3" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 153.0
margin_right = 217.0
margin_bottom = 100.0

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/VBoxContainer3"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 1 )

[node name="CenterContainer3" type="CenterContainer" parent="HBoxContainer/VBoxContainer3"]
margin_top = 68.0
margin_right = 64.0
margin_bottom = 100.0

[node name="Arrow" type="TextureRect" parent="HBoxContainer/VBoxContainer3/CenterContainer3"]
margin_left = 16.0
margin_right = 48.0
margin_bottom = 32.0
texture = ExtResource( 3 )

[node name="VBoxContainer4" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 225.0
margin_right = 289.0
margin_bottom = 100.0

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/VBoxContainer4"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 1 )

[node name="CenterContainer4" type="CenterContainer" parent="HBoxContainer/VBoxContainer4"]
margin_top = 68.0
margin_right = 64.0
margin_bottom = 100.0

[node name="Arrow" type="TextureRect" parent="HBoxContainer/VBoxContainer4/CenterContainer4"]
margin_left = 16.0
margin_right = 48.0
margin_bottom = 32.0
texture = ExtResource( 3 )

[node name="VBoxContainer5" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 297.0
margin_right = 361.0
margin_bottom = 100.0

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/VBoxContainer5"]
self_modulate = Color( 0.858824, 0.858824, 0.858824, 0.0470588 )
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer5/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "ALL"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer5" type="CenterContainer" parent="HBoxContainer/VBoxContainer5"]
margin_top = 68.0
margin_right = 64.0
margin_bottom = 100.0

[node name="Arrow" type="TextureRect" parent="HBoxContainer/VBoxContainer5/CenterContainer5"]
margin_left = 16.0
margin_right = 48.0
margin_bottom = 32.0
texture = ExtResource( 3 )
